<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    android:id="@+id/event_creation_screen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="   Event Creation"
        android:textColor="@color/light_green"
        android:background="@color/dark_grey"
        android:textSize="32sp"
        android:textStyle="bold"
        android:padding="15dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textColor="@color/black"
        android:background="@drawable/edit_facility_screen_bg"
        android:layout_marginTop="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="20dp"
        android:paddingBottom="50dp"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name:"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="start"
            android:layout_gravity="start"/>

        <EditText
            android:id="@+id/event_name_edit_text"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@color/light_purple"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:inputType="text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date:"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="start"
            android:layout_gravity="start"/>
        <TextView
            android:id="@+id/event_date_text_view"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@color/light_purple"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:text="Select Date"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time:"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="start"
            android:layout_gravity="start"/>
        <TextView
            android:id="@+id/event_time_text_view"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@color/light_purple"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:text="Select Time"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Details:"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="start"
            android:layout_gravity="start"/>

        <EditText
            android:id="@+id/event_details_edit_text"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@color/light_purple"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Max Participants: \n(Leave empty for max: ~1 Billion)"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="start"
            android:layout_gravity="start"/>

        <EditText
            android:id="@+id/event_max_participants_edit_text"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@color/light_purple"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload Image:"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="start"
            android:layout_gravity="start"/>

        <Button
            android:id="@+id/upload_photo_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/light_purple"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            app:backgroundTint="@null"
            android:text="Browse Photos"
            android:layout_gravity="start"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Check Geolocation:"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="start"
            android:layout_gravity="start"/>

        <CheckBox
            android:id="@+id/event_geolocation_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Checks entrant's location when \nthey signup"
            android:textSize="16sp"
            android:checked="false"
            android:textColor="@color/black"
            android:padding="10dp"
            android:buttonTint="@color/black"
            android:buttonTintMode="src_in" />

        <!--    id for button was used elsewhere        -->
        <Button
            android:id="@+id/create_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Event\n(Generates QR Code)"
            android:textColor="@android:color/black"
            app:backgroundTint="@null"
            android:background="@color/light_green"
            android:padding="5dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button
        android:id="@+id/return_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@null"
        android:textColor="@color/light_green"
        android:background="@color/dark_grey"
        android:text="Return"
        android:letterSpacing="0.1"
        android:textSize="32sp"
        android:textStyle="bold"
        android:padding="12dp"/>

</LinearLayout>