<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/dialogue_notification_bg"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please enter the amount of\nparticipants you want sampled\n(leave blank to sample max amount):"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <EditText
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:background="@color/light_green"
            android:inputType="number"
            android:id="@+id/sample_entrants_edittext"
            android:textAlignment="center"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sample_entrants_dialogue_button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:text="OK"
            android:backgroundTint="@null"
            android:background="@drawable/sample_entrants_dialogue_button_bg"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
</LinearLayout>