...
            android:textSize="25dp"
            android:textStyle="bold"
            android:padding="15dp"
            android:textAlignment="center"/>

        <Spinner
            android:id="@+id/choose_role_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="10dp"
            android:spinnerMode="dropdown"
            android:background="@color/white"/>


    </LinearLayout>

    <Button
        android:id="@+id/confirm_role_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm Role"
        android:textColor="@android:color/black"
        app:backgroundTint="@null"
        android:background="@drawable/organizer_button_bg"
...
